Massive try at reducing memory usage: -Change config-system to reduce the per agent memory usage. -Move to "transports" instead of "transport" in eve.yaml -Change JSONRequests to bean form -many changes to the EventBus/Trickle/Graph code.