@@ -12,4 +12,19 @@
 	<name>EVE Algorithms Simple Collection</name>
 	<description>Collection of simpler algorithms, simple protocols/statemachines.</description>
 
+<build>
+    <pluginManagement>
+	<plugins>
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.18.1</version>
+    <configuration>
+        <argLine>-Xmx8156m -XX:MaxPermSize=512m</argLine>
+    </configuration>
+  </plugin>
+</plugins>
+</pluginManagement>
+</build>
+
 </project>
